Ajout de try catch pour la lecture du buffer